--- a/pertemuan2/style.css
+++ b/pertemuan2/style.css
@@ -58,7 +58,7 @@
             font-family: monospace;
         }
 
-        .button1 {
+        button {
             background-color: #4CAF50; /* Green */
             color: white;
             padding: 15px 32px;
